# d2d

./: '  .gitignore  AUTHORS  README.md  README_BACKUP_7878.md  README_BASE_7878.md  README_LOCAL_7878.md  d2d  d2d.cpp  d2d_conv_manager_fake.cpp  d2d_conv_manager_fake.h  d2d_tizen.cpp  scope_logger.h  techno_service.h
console/: CMakeLists.txt
console/include/: common.h  scope_logger.h
console/src/: common.cpp  d2d_conv_console.cpp  d2d_conv_console.h  d2d_conv_manager_fake.cpp  d2d_voice_control.cpp  d2d_voice_control.h  main.cpp  techno_service.cpp  techno_service.h
d2d_console/: CMakeLists.txt
d2d_console/console/include/: picojson.h
d2d_console/console/src/: d2d_conv_console.cpp  d2d_conv_console.h  d2d_conv_manager_fake.cpp  techno_service.cpp
d2d_console/packaging/: d2d-conv-console.spec
doc/: .gbs.conf
gui_chat/: .cproject  .project  project_def.prop  tizen-manifest.xml
gui_chat/inc/: d2d-chat.h
gui_chat/src/: d2d-chat.c  d2d-chat.cpp  d2d_conv_console.cpp  scope_logger.h
packaging/: d2d-conv-console.service  d2d-conv-console.spec
